# flathunter-rs

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: errors.rs  main.rs  time_serializer.rs
src/crawlers/: immoscout.rs  mod.rs
src/notifiers/: mod.rs  webhook.rs
