[package]
name = "flathunter-rs"
version = "0.1.0"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2018"

[dependencies]
reqwest = "0.9.18"
regex = "1.1.7"
rust_decimal = "1.0.1"
itertools = "0.8.0"
select = "0.4.2"
error-chain = "0.12.1"
lazy_static = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.6"
fern = "0.5.8"
chrono = "0.4.7"
humantime = "1.2.0"
human-panic = "1.0.1"
signal-hook = "0.1.9"